[package]
name = "akasma_os"
version = "0.1.0"
authors = ["Tariq Anwar <ansaritariq1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.6.4"